fix: prevent overflow of words in the message or quoted message bubble

--- a/src/styles/Message.scss
+++ b/src/styles/Message.scss
@@ -753,6 +753,7 @@
       flex: initial;
       text-align: left;
       max-width: 460px;
+      word-break: break-all;
 
       &.str-chat__message-simple-text-inner--is-emoji {
         background: transparent;
